Fix offset when navigating to headings on mobile
This unfortunately means that the toc component needs to interfere with the technical documentation component. It’d be good to avoid this if possible, but there doesn’t appear to be a way.

--- a/source/stylesheets/modules/_toc.scss
+++ b/source/stylesheets/modules/_toc.scss
@@ -158,6 +158,26 @@
           }
         }
       }
+
+      // Allow space header on mobile
+      .technical-documentation {
+        $offset: 20px + $gutter-half + 10px + 1px;
+
+        h1, h2, h3, h4, h5, h6 {
+          // Line height + padding + border of .toc-show
+          
+          padding-top: $gutter-half + $offset;
+          margin-top: -$offset;
+        }
+
+        h1 {
+          margin-top: ($gutter * 2) - $offset;
+        }
+
+        h1:first-child {
+          margin-top: -$offset;
+        }
+      }
     }
   }
 }
